# apteka-bot

./: .env.example  .gitignore  DEPLOYMENT_LESSONS.md  DEV_CONTEXT.md  PROJECT_CONTEXT.md  README.md  clear_table.py  debug_email.py  debug_table.py  github_actions_key.pub  photo-gallery-484020-c9d57645a635.json  pyproject.toml  requirements.txt  run_bot.bat  run_bot_dev.bat  test_email.py  test_parse.py  test_products.py  test_real_email.py  test_send_wa.py  test_sheets.py  test_sms.py  test_whatsapp.py  vps_setup.sh
.agent/: README_rules.md
.agent/workflows/: ai-model-selection.md  communication.md
.github/workflows/: deploy.yml
extension/: config.js  manifest.json  popup.html  popup.js
src/: __init__.py  config.py  email_monitor.py  main.py
src/bot/: __init__.py  handlers.py  speech_kit.py  telegram_bot.py
src/database/: __init__.py  models.py  sheets.py
src/extractors/: __init__.py  apteka_parser.py  order.py  phone.py  products.py
src/parsers/: __init__.py  docx_parser.py  html_parser.py  pdf_parser.py
src/senders/: __init__.py  sms.py  sms_gateway.py  telegram.py  whatsapp.py
tests/: conftest.py  test_extractors.py  test_parsers.py
